# ConspectPRO

./: .gitignore  README.md  main.py  normal_requirements.txt  pyproject.toml  requirements.txt  requirements_giga.txt
ai_tools/: __init__.py  translator.py
ai_tools/googletrans_httpx/: __init__.py  client.py  gtoken.py
ai_tools/multi_recognition/audio_read/: audio_to_txt.py
ai_tools/multi_recognition/audio_read/audio_models/GigaAM_CTC/: GigaAM_CTC.py  utils.py
ai_tools/multi_recognition/audio_read/audio_models/GigaAM_CTC_in_development/: GigaAM_CTC.py  inference.py  utils.py
ai_tools/multi_recognition/audio_read/audio_models/pocketsphinx/: pocketsphinx_api.py
ai_tools/multi_recognition/audio_read/audio_models/vosk/: vosk_api.py
ai_tools/note_cover_gen/models/: kandinsky3.1_api.py
ai_tools/note_processing/: create_llm_session.py
ai_tools/note_processing/llm_model/: llm_prompts.py
tests/: main.py
