[tool.poetry]
name = "ai-tools"
version = "0.0.1"
description = "Library for easy management of AI functions in the application"
authors = ["Alicorn757 <jurykem@gmail.com>"]
license = "Attribution-NonCommercial-ShareAlike 4.0 International"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
translate = "^3.6.1"
mistralai = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
